--- a/queries.html
+++ b/queries.html
@@ -118,7 +118,7 @@
 
         <h3>Group By(column wise aggregation)</h3>
             <li><label>List city wise user count</label></li>
-                <h3>SELECT city COUNT(*) AS user_count FROM users GROUP BY city</h3>
+                <h3>SELECT city, COUNT(*) AS user_count FROM users GROUP BY city</h3>
 
     </ol>
 </body>
